--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,169 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  background-color: #FAFAFA;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  height: 70px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: #3B4CCA;
+}
+
+nav div {
+  background-color: #3B4CCA;
+}
+
+.navbar-img {
+  width: 120px;
+  margin-right: 150px;
+  background-color: #3B4CCA;
+}
+
+.fav-text {
+  font-size: 16px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.searchbar-container {
+  display: flex;
+  margin: 17px auto;
+  padding: 0px 20px;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchbar {
+  background-color: white;
+  margin-right: 20px;
+}
+
+.searchbar input {
+  border-radius: 4px;
+  border: none;
+  padding: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.searchbar input:hover {
+  background-color: rgb(243, 243, 243);
+}
+
+.searchbar-btn button {
+  border-radius: 10px;
+  border: none;
+  background-color: #3B4CCA;
+  height: 34px;
+  color: white;
+  padding: 10px 12px;
+  cursor: pointer;
+}
+
+.searchbar-btn button:hover {
+  background-color: #2d3ba8;
+}
+
+.pokedex-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.pokedex-header h1 {
+  margin-left: 6px;
+}
+
+.pokedex-grid {
+  margin: auto 15px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.pokemon-card {
+  display: flex;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  border: 2px solid;
+}
+
+.pokemon-image-container {
+  padding: 0 5px;
+  border-radius: 6px;
+}
+
+.pokemon-image {
+  height: 70px;
+  width: 70px;
+  margin-right: 10px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 10px 10px 0;
+  flex: 1;
+  border-radius: 6px;
+}
+
+.card-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-top h3 {
+  text-transform: capitalize;
+}
+
+.card-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pokemon-type {
+  display: flex;
+}
+
+.pokemon-type-text {
+  margin-right: 10px;
+  text-transform: capitalize;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 2px;
+}
+
+.pagination-container {
+  display: flex;
+  align-items: center;
+}
+
+.pagination-container button {
+  cursor: pointer;
+  margin: 0 7px;
+  border-radius: 5px;
+  font-size: 16px;
+  border: 2px solid black;
+  width: 32px;
+}
+
+.pokemon-heart-btn {
+  border: none;
+  background-color: #FAFAFA;
+  cursor: pointer;
+  padding: 4px;
+}
+
+.not-found-text {
+  text-align: center;
+  font-size: 1.25rem;
+  padding: 20px;
+}
+
+.App {
+  text-align: center;
 }
