--- a/src/App.css
+++ b/src/App.css
@@ -127,14 +127,243 @@ nav div {
 
 .pokemon-type {
   display: flex;
+  text-transform: capitalize;
+  font-size: 14px;
+  color: white;
 }
 
-.pokemon-type-text {
+.normal {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-right: 10px;
-  text-transform: capitalize;
-  border: 1px solid black;
-  border-radius: 4px;
-  padding: 2px;
+  border: 1px solid #6D6D4E;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #A8A878;
+}
+
+.fire {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #9C531F;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #F08030;
+}
+
+.fighting {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #7D1F1A;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #C03028;
+}
+
+.water {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #445E9C;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #6890F0;
+}
+
+.flying {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #6D5E9C;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #A890F0;
+}
+
+.grass {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #4E8234;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #78C850;
+}
+
+.poison {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #682A68;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #A040A0;
+}
+
+.electric {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #A1871F;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #F8D030;
+}
+
+.ground {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #927D44;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #E0C068;
+}
+
+.psychic {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #A13959;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #F85888;
+}
+
+.rock {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #786824;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #B8A038;
+}
+
+.ice {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #638D8D;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #98D8D8;
+}
+
+.bug {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #6D7815;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #A8B820;
+}
+
+.dragon {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #4924A1;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #7038F8;
+}
+
+.ghost {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #493963;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #705898;
+}
+
+.dark {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #49392F;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #705848;
+}
+
+.steel {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #787887;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #B8B8D0;
+}
+
+.fairy {
+  width: 53px;
+  height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  border: 1px solid #9B6470;
+  border-radius: 20px;
+  padding: 4px;
+  background-color: #EE99AC;
 }
 
 .pagination-container {
