--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,19 @@ nav div {
 .fav-text {
   font-size: 16px;
   color: white;
+  margin-right: 30px;
+}
+
+.pokeapi-anchor a{
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  background-color: #3B4CCA;
+}
+
+.pokeapi-anchor a:hover {
+  color: #FFDE00;
 }
 
 .searchbar-container {
@@ -47,7 +60,7 @@ nav div {
 }
 
 .searchbar input:hover {
-  background-color: rgb(243, 243, 243);
+  background-color: #F3F3F3;
 }
 
 .searchbar-btn button {
