--- a/src/App.css
+++ b/src/App.css
@@ -409,3 +409,53 @@ nav div {
 .App {
   text-align: center;
 }
+
+@media (max-width: 850px) {
+  .pokedex-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 570px) {
+  .pokedex-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 482px) {
+  .navbar-img {
+    margin-right: 60px;
+  }
+}
+
+@media (max-width: 393px) {
+  .navbar-img {
+    width: 100px;
+    margin-right: 45px;
+  }
+}
+
+@media (max-width: 351px) {
+  .navbar-img {
+    width: 100px;
+    margin-right: 30px;
+  }
+
+  .fav-text {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 328px) {
+  .navbar-img {
+    width: 85px;
+  }
+
+  .fav-text {
+    font-size: 14px;
+  }
+
+  .pokeapi-anchor a{
+    font-size: 14px;
+  }
+}
